--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
     <div id="tc-container" class="dialog shadow-sm">
         <div id="tc-messenger" class="tc-messenger">
             <div class="tc-messenger-header">
-                <ul class="mx-auto">
+                <span class="arrow">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><path d="M7.263 11l2.792 2.577a.788.788 0 0 1 0 1.179.956.956 0 0 1-1.277 0l-4.513-4.167a.788.788 0 0 1 0-1.178l4.513-4.167A.94.94 0 0 1 9.417 5a.94.94 0 0 1 .638.244.788.788 0 0 1 0 1.178L7.263 9H15a1 1 0 0 1 0 2H7.263z"></path></svg>
+                </span>
+                <ul class="mx-auto" style="width:200px;font-size:13px;">
                     <li><a href="#tc-answers">Answers</a></li>
                     <li><a href="#tc-ask">Ask</a></li>
                 </ul>
@@ -45,7 +48,7 @@
             <div class="tc-messenger-body">
                 <div id="tc-answers">
                     <div id="tc-messenger-suggestions" class="tc-messenger-suggestions"></div>
-                    <input id="tc-messenger-input" placeholder="Ask us">
+                    <input id="tc-messenger-input" placeholder="Search CARTO help contents">
                 </div>
             
             <!-- support -->
