fix placeholders styles

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             </label>
                         </div>
                         <br/>
-                        <button type="submit" class="btn btn-primary">Send a message</button>
+                        <button type="submit" class="btn btn-primary btn-block btn-lg">Send a message</button>
                     </div>
                 </form>
             </div>
