--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
     </div>
 
     <div id="tc-container" class="dialog shadow-sm">
+        <!--<div id="homescreen">
+            <h1>Suggested for you</h1>
+            <ul>
+                <li>tips</li>
+            </ul>
+            <hr>
+            <p>Contact us</p>
+            <div id="tc-answers">
+                    <div id="tc-messenger-suggestions" class="tc-messenger-suggestions"></div>
+                    <input id="tc-messenger-input" placeholder="Search CARTO help contents">
+                </div>
+        </div>-->
+
         <div id="tc-messenger" class="tc-messenger">
             <div class="tc-messenger-header">
                 <span class="arrow">
