add links and actions to the homescreen

--- a/index.html
+++ b/index.html
@@ -31,20 +31,26 @@
     </div>
 
     <div id="tc-container" class="dialog shadow-sm">
-        <!--<div id="homescreen">
+        <div id="homescreen">
+            <div class="container">
             <h1>Suggested for you</h1>
             <ul>
-                <li>tips</li>
+                <li><a href="">Preparing and formatting data</a></li>
+                <li><a href="">First steps with the widgets</a></li>
+                <li><a href="">Export map as an image</a></li>
+                <li><a href="">What the map views indicates?</a></li>
+                <li><a href="">Easy Builder animated map</a></li>
             </ul>
             <hr>
-            <p>Contact us</p>
+            <p><img src="img/ask-icon.png"> <a class="activate-ask" href="">Contact us</a></p>
+            </div>
             <div id="tc-answers">
                     <div id="tc-messenger-suggestions" class="tc-messenger-suggestions"></div>
                     <input id="tc-messenger-input" placeholder="Search CARTO help contents">
                 </div>
-        </div>-->
+        </div>
 
-        <div id="tc-messenger" class="tc-messenger">
+        <div id="tc-messenger" class="tc-messenger" style="display:none;">
             <div class="tc-messenger-header">
                 <span class="arrow">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><path d="M7.263 11l2.792 2.577a.788.788 0 0 1 0 1.179.956.956 0 0 1-1.277 0l-4.513-4.167a.788.788 0 0 1 0-1.178l4.513-4.167A.94.94 0 0 1 9.417 5a.94.94 0 0 1 .638.244.788.788 0 0 1 0 1.178L7.263 9H15a1 1 0 0 1 0 2H7.263z"></path></svg>
