--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><a href="">Easy Builder animated map</a></li>
             </ul>
             <hr>
-            <p><img src="img/ask-icon.png"> <a class="activate-ask" href="">Contact us</a></p>
+            <p><img src="img/ask-icon.png"> <a class="activate-ask" href="#tc-ask">Contact us</a></p>
             </div>
         </div>
 
