add slide about benefits

--- a/presentation/circle.html
+++ b/presentation/circle.html
@@ -30,8 +30,11 @@
 </head>
 <body>
 <section class="content">
-    <h1>Talking Heads</h1>
-    <p>@csubillas, @jsanz, @juanma, @inigomedina</p>
+    <h1>Service as Product</h1>
+    <p>🚀 Scale Up Support Workflows</p>
+    <p>🌈 Wonderful Experience</p>
+    <p>♻️ Virtuous Circle</p>
+    </ul>
 </section>
 </body>
 </html>
