--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                 <form action="">
                     <div class="tc-ask-form">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Subject" name="subject" required>
+                            <input id="tc-subject" type="text" class="form-control" placeholder="Subject" name="subject" required>
                         </div>
 
                         <div class="form-group">
-                                <textarea class="form-control" name="message" placeholder="How can we help?" rows="7"></textarea>
+                                <textarea id="tc-message" class="form-control" name="message" placeholder="How can we help?" rows="7"></textarea>
                         </div>
                         <div class="form-check">
                             <input id="tc-screenshot-checkbox" class="form-check-input" name="screenshot" type="checkbox" value="" checked="checked">
@@ -87,7 +87,7 @@
                                 Include screenshot
                             </label>
                             <div id="tc-screenshoot-sample" class="tc-screenshoot-sample">
-                                <img class="tc-screenshot-image" src="https://res.cloudinary.com/dmi1rx1pn/image/upload/v1538135489/7juybxl.png" alt="">
+                                <img id="tc-screenshot-image" class="tc-screenshot-image" src="https://res.cloudinary.com/dmi1rx1pn/image/upload/v1538135489/7juybxl.png" alt="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -95,7 +95,7 @@
                             <input id="tc-email"type="hidden" placeholder="" name="email">
                         </div>
 
-                        <button type="submit" class="btn btn-primary btn-block btn-lg">Send a message</button>
+                        <button id="#tc-form" class="btn btn-primary btn-block btn-lg">Send a message</button>
                     </div>
                 </form>
             </div>
