--- a/presentation/index.html
+++ b/presentation/index.html
@@ -13,13 +13,33 @@
         width:100%;
         background-color: transparent;
        } 
+
+       .bgimg-1, .bgimg-2, .bgimg-3 {
+  position: relative;
+  opacity: 0.65;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+.bgimg-1 {
+  background-image: url("https://res.cloudinary.com/bloomsbury-publishing-public/image/upload/q_34,f_auto/bpm/iid-bpm-21772/Talking_Heads.jpg");
+  height: 100%;
+}
+
        .content {
-           margin-top: 15%;
            text-align: center;
            display: block;
+
+       }
+
+       .layer {
+           padding-top: 15%;
+           background: #ffffff6e;
        }
 
        h1 {
+        
            font-size: 60px;
        }
        p {
@@ -29,9 +49,13 @@
     </style>
 </head>
 <body>
-<section class="content">
+        <section class="content">
+    <div class="bgimg-1">
+        <div class="layer">
     <h1>Talking Heads</h1>
     <p>@csubillas, @jsanz, @juanma, @inigomedina</p>
+</div>
 </section>
+</div>
 </body>
 </html>
