Update mailing config

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             
             <!-- support -->
             <div id="tc-ask" class="tc-ask">
-                <form action="">
+                <form id="tc-form" action="">
                     <div class="tc-ask-form">
                         <div class="form-group">
                             <input id="tc-subject" type="text" class="form-control" placeholder="Subject" name="subject" required>
@@ -95,7 +95,7 @@
                             <input id="tc-email"type="hidden" placeholder="" name="email">
                         </div>
 
-                        <button id="#tc-form" class="btn btn-primary btn-block btn-lg">Send a message</button>
+                        <button id="#tc-form-button" class="btn btn-primary btn-block btn-lg">Send a message</button>
                     </div>
                 </form>
             </div>
