add message sent view

--- a/index.html
+++ b/index.html
@@ -72,7 +72,13 @@
             
             <!-- support -->
             <div id="tc-ask" class="tc-ask">
-                <form action="">
+                <div class="form-sent">
+                    <img class="mx-auto d-block" src="img/message-sent.png" /><br/>
+                    <h3 class="text-center">Help is on the way</h3>
+                    <p class="text-center">Someone from the team is about to read your message and will reach out to you soon.</p>
+                </div>
+                <form class="form-ask" action="">
+                    <img class="mx-auto d-block" src="img/support-team.png" />
                     <div class="tc-ask-form">
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Subject" name="subject" required>
