fix styles when the message is sent

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                 <div class="form-sent">
                     <img class="mx-auto d-block" src="img/message-sent.png" /><br/>
                     <h3 class="text-center">Help is on the way</h3>
-                    <p class="text-center">Someone from the team is about to read your message and will reach out to you soon.</p>
+                    <p class="text-center">Someone from the team is about to read your message and will reach out to you soon. You can also <a href="">see your previous messages</a>.</p>
+
                 </div>
                 <form id="tc-form" action="">
                     <img class="mx-auto d-block" src="img/support-team.png" />
