--- a/presentation/index.html
+++ b/presentation/index.html
@@ -53,7 +53,7 @@
     <div class="bgimg-1">
         <div class="layer">
     <h1>Talking Heads</h1>
-    <p>@csubillas, @jsanz, @juanma, @inigomedina</p>
+    <p>@cillas, @jsanz, @juanma, @inigomedina</p>
 </div>
 </section>
 </div>
